--- a/index.html
+++ b/index.html
@@ -14,6 +14,53 @@
 	  	<title>La República.pe</title>
 	</head>
 	<body>
-		
+		<div class="container-fluid">
+			<section>
+			<div class="container"> 
+				<div class="row">   
+		            <div class="col-xs-16 col-sm-16  col-md-8 col-lg-8">
+		              <div class="row">
+		                <div class="col-xs-12 col-sm-12  col-md-6 col-lg-6"> 
+			                <p>Mercado de Pases 2015</p>
+			                <img src="image/img_especiales.jpg" alt="img_especiales">
+			                <p> Duis aute irure dolor in reprehenderit in voluptate velit esse
+			                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+			                <p> Duis aute nulla pariatur.</p>
+	               		</div>
+	               		<div class="col-xs-12 col-sm-12  col-md-6 col-lg-6"> 
+		               		<p>Régimen laboral juvenil</p>
+			                <img src="image/img_especiales_aside.jpg" alt="">
+			                <p> Duis aute irure dolor in reprehenderit in voluptate velit esse
+			                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			                <p> Duis aute nulla pariatur.</p>	 
+	               		</div>
+	               	</div>
+	               	<div class="row">
+		                <div class="col-xs-12 col-sm-12  col-md-6 col-lg-6"> 
+			                <p>Champions League</p>
+			                <img src="" alt="">
+			                <p> Duis sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			                <p> Duis aute nulla pariatur.</p>
+		               		</div>
+		               		<div class="col-xs-12 col-sm-12  col-md-6 col-lg-6"> 
+		               		<p>Super Bowl</p>
+			                <img src="" alt="">
+			                <p> Duis aute irure dolor in reprehenderit in voluptate velit esse
+			                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			                <p> Duis aute nulla pariatur.</p>	 
+	               		</div>
+	               	</div>
+               	</div>
+			</section>
+			
+
+
+
+		</div>	
 	</body>
 </html>
+
+marcado de pases
+champions league
+régimen laboral
+super bowl
