--- a/index.html
+++ b/index.html
@@ -14,6 +14,45 @@
 	  	<title>La República.pe</title>
 	</head>
 	<body>
-		
+		<header>
+			<!--banner-->
+			<div class="row">
+				<div class="col-xs-16 col-lg-16">
+					<nav class="navbar navbar-default navbar-fixed-top" role="navigation"><!--inicio menu principal-->
+						<div class="container-fluid">
+							<div class="navbar-header"><!--inicio menu responsive-->
+								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-principal">
+									<span class="sr-only">nav-responsive</span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+								</button>
+							</div><!--fin menu responsive-->
+						</div>
+						<div class="collapse navbar-collapse" id="menu-principal">
+							<ul class="nav navbar-nav">
+								<li><a href="#">POLÍTICA</a></li>
+								<li><a href="#">ECONOMÍA</a></li>
+								<li><a href="#">SOCIEDAD</a></li>
+								<li><a href="#">ELECC. REGIONALES</a></li>
+								<li><a href="#">DEPORTES</a></li>
+								<li><a href="#">CHAMPIONS L.</a></li>
+								<li><a href="#">ESPECTÁCULOS</a></li>
+								<li><a href="#">ED. IMPRESA</a></li>
+								<li><a href="#">REGIONALES</a></li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">MÁS SECCIONES<span class="caret"></span></a>
+									<ul class="dropdown-menu" role="menu">
+										<li><a href="#">ENLACE1</a></li>
+										<li><a href="#">ENLACE2</a></li>
+										<li><a href="#">ENLACE3</a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+					</nav><!--fin menu principal-->
+				</div>
+			</div>
+		</header>
 	</body>
 </html>
