--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/utilities.css">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 		<script src="js/bootstrap.min.js"> </script>
 		<script src="js/tagcanvas.min.js" type="text/javascript"></script>
@@ -14,6 +15,69 @@
 	  	<title>La República.pe</title>
 	</head>
 	<body>
+	<section><!--infografías-->
+	<div class="row">
+		<div class="col-lg-6">
+			<hr>
+			<p>INFOGRAFÍAS</p>
+			<div class="row">
+				<div class="col-lg-16">
+					<img class="tamañogral" src="image/img_especiales_aside.jpg"><!--checar el link de las imagenes y -->
+					<p class="fondobl posicionar01">Histórico de cierre de frontera</p><!--agregar fondo blanco, debajo del texto, la clase posicionar para el position absolute mas los valores-->
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-8">
+					<img class="tamañoimg" src="image/thumb-post-image.jpg"><!--checar el link de las imagenes y -->
+				</div>
+				<div class="col-lg-8">
+					<div class="row">
+						<div class="col-lg-16 ">
+							<img class="tamañogral" src="image/thumb-post-image.jpg"><!--checar el link de las imagenes y -->
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-16">
+							<img class="tamañogral" src="image/thumb-post-image.jpg"><!--checar el link de las imagenes y -->
+						</div>
+					</div>
+				</div>
+			</div>
+			<p class="fondobl posicionar01 pt-5">Evolución de la pobreza e indigencia en Améroca Latina</p><!--agregar fondo blanco, debajo del texto, la clase posicionar para el position absolute mas los valores-->
+			<hr>	
+			<div class="row">
+				<div class="col-lg-16" id="fondopuntos">
+					<img class="center-block position" src="image/img_pregunta.png">
+					<div ><!--definir bg -->
+						<div class="fondoblanco margg">
+							<p class="text-center">La pregunta de hoy</p>
+							<p>¿Cree usted que la premier Ana Jara debe renunciar?</p>
+							<div class="checkbox marggsino">
+  							<label><input type="checkbox" value="">Si</label>
+							</div>
+							<div class="checkbox marggsino">
+  							<label><input type="checkbox" value="">No</label>
+							</div>
+							<button type="button" class="btn btn-danger center-block padd">VOTAR</button>
+							<a class="margver" href="#">Ver resultados</a>	
+						</div>
+						<div class="fondoblanco margg">
+							<p class="text-center">La pregunta de ayer</p>
+							<p>¿Cree usted que se militarizo la conmemoración del fallo de la Haya en Lima?</p>
+							<div class="progress">
+  							<div class="progress-bar  colorverde margg text-center" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">55%
+  							</div>  							
+							</div>
+							<div class="progress">
+  							<div class="progress-bar colorojo margg text-center" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%
+  							</div>
+							</div>
+							<a class="margg" href="#">Ver preguntas pasadas</a>
+						</div>
+			</div>
+	
+</section>
+</aside> <!--cierre de aside -->
 		
 	</body>
 </html>
