maqueta html sin estilos section y footer

--- a/index.html
+++ b/index.html
@@ -2,18 +2,226 @@
 <html lang="en">
 	<head>
 	  	<meta charset="utf-8">							
-	  	<link rel="stylesheet" href="css/font-awesome.css"><!--  AGREGAR LINKS-->
+	  	<!--  AGREGAR LINKS-->
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 		<script src="js/bootstrap.min.js"> </script>
-		<script src="js/tagcanvas.min.js" type="text/javascript"></script>
-		<meta name="viewport" content="widith=device-widith, initial-scale=1.0">  <!-- para que funcione el codigo a escala -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- para que funcione el codigo a escala -->
 		<link rel="stylesheet" href="css/style.css">
 	  	<title>La República.pe</title>
 	</head>
 	<body>
-		
+		<div class="container-fluid">
+			<section>
+			<div class="container"> 
+				<div class="row">   
+		            <div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+		              	<div class="row">
+			                <div class="col-xs-12 col-sm-12  col-md-12 col-lg-12"> 
+			                	<div class="row">                         	<!-- CUATRO IMG -->
+				                 	<div class=" col-xs-12 col-sm-12  col-md-8 col-lg-8">
+						                <p>Mercado de Pases 2015</p>
+						                <img src="image/img_especiales.jpg" alt="img_especiales">
+						                <p> Duis aute irure dolor in reprehenderit in voluptate velit esse
+						                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+						                <p> Duis aute nulla pariatur.</p>
+				               		</div>
+				               		<div class="col-xs-12 col-sm-12  col-md-8 col-lg-8"> 
+					               		<p>Régimen laboral juvenil</p>
+						                <img src="image/img_especiales_aside.jpg" alt="">
+						                <p> Duis aute irure dolor in reprehenderit in voluptate velit esse
+						                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						                <p> Duis aute nulla pariatur.</p>	 
+				               		</div>
+				               	</div>
+				               	<div class="row">
+					                <div class="col-xs-12 col-sm-12  col-md-8 col-lg-8"> 
+						                <p>Champions League</p>
+						                <img src="image/img_especiales.jpg" alt="img_especiales">
+						                <p> Duis sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						                <p> Duis aute nulla pariatur.</p>
+					               		</div>
+					               		<div class="col-xs-12 col-sm-12  col-md-8 col-lg-8"> 
+					               		<p>Super Bowl</p>
+						                <img src="image/img_especiales_aside.jpg" alt="">
+						                <p> Duis aute irure dolor in reprehenderit in voluptate velit esse
+						                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						                <p> Duis aute nulla pariatur.</p>	
+						            </div> 
+						       	</div>
+		               		</div>
+		               	</div>
+		               	<div class="row">                       <!-- PRIMERO : Capitán América -->
+			                <div class="col-xs-12 col-sm-12  col-md-12 col-lg-12"> 
+			                	<p>ULTIMAS NOTICIAS</p>
+			                	<img src="image/double-arrow-bottom.png">
+			                	<p>hace 1 hora 12 mins</p>
+			                	<a href="#" data-toggle="tooltip" title="Adquiere una PRUEBA GRATUITA">¡Steve Rogers ya no será el Capitán América en el cine! | VIDEO</a>
+			                	<!-- <p>¡Steve Rogers ya no será el Capitán América en el cine! | VIDEO</p> -->
+			                	<img src="image/steve_rogers.jpg" alt="steve_rogers">
+			                	<p>Joe y Anthony Russo, directores de Civil War y de la futura Avengers: Infinity War, declararon en entrevista con el Huffington Post que Rogers oficialmente ya no será el Capi en las futuras entregas del Marvel Cinematic Universe.</p>
+								<p>Joe declaro que “(Rogers) tirando el escudo al final de Civil War es su manera de deshacerse de esa identidad, de admitir que la identidad del Capitán América le implicaba conflicto con sus decisiones personales”.</p>
+			                	<i class="fa fa-facebook-official" aria-hidden="true"></i><!-- icono facebook -->
+			                	<i class="fa fa-twitter-square" aria-hidden="true"></i><!-- icono  twitter-->
+			                	<i class="fa fa-google-plus" aria-hidden="true"></i><!-- icono  google+-->
+			                	<img src="image/bullet.gif" alt="bullet">
+			                	<img src="image/ico_comment_inverted.png" alt="ico_comment_inverted"><!--ico_comment_inverted -->
+			                	<p>10</p>
+			                	<img src="image/bullet.gif" alt="bullet">
+			                	<span>ESPECTÁCULOS</span>
+			                	<span>punto</span>
+			                	<i class="fa fa-youtube-play" aria-hidden="true"></i><!-- icono youtube -->
+			                	<hr>
+							</div>
+		               	</div>
+		               	<div class="row">                        <!-- SEGUNDO Roque Benavides-->
+			                <div class="col-xs-12 col-sm-12  col-md-12 col-lg-12"> 
+			                	<p>hace 1 hora 12 mins</p>
+			                	<p>Roque Benavides respalda proyecto Tía María y espera que Conga se socialice</p>
+			                	<img src="image/roque benavides.jpg" alt="roque benavides">
+			                	<p>Zenaida Condori Contreras Arequipa Para el presidente de la compañia de Minas Buenaventura, Roque Benavides, El proyecto Tía María, que promueve Southem Perú, ya debe...</p>
+			                	<i class="fa fa-facebook-official" aria-hidden="true"></i><!-- icono facebook -->
+			                	<i class="fa fa-twitter-square" aria-hidden="true"></i><!-- icono  twitter-->
+			                	<i class="fa fa-google-plus" aria-hidden="true"></i><!-- icono  google+-->
+			                	<img src="image/bullet.gif" alt="bullet">
+			                	<img src="image/ico_comment_inverted.png" alt="ico_comment_inverted"><!--ico_comment_inverted -->
+			                	<p>10</p>
+			                	<img src="image/bullet.gif" alt="bullet">
+			                	<p>AREQUIPA</p>
+			                	<hr>
+			                </div>
+			            </div>
+			            <div class="row">                            <!--TERCERO star treck -->
+			                <div class="col-xs-12 col-sm-12  col-md-12 col-lg-12"> 
+			                	<p>hace 1 hora 12 mins</p>
+			                	<p>Este jueves llega a Perú la tercera cinta de "Star Trek"| FOTOS</p>
+			                	<img src="image/Startrek.jpg" alt="Startrek">
+			                	<p>La cinta de "Star Trek" ("Viaje a las estrellas"), franquicia de ciencia ficción que obtuvo un reinicio en 2009 gracias al cineasta J.J. Abrams. Uno de los personajes más emblemáticos de esta historia es la teniente Uhura, interpretada por Zoe Saldaña.</p>
+								<p>En "Stark Trek", Nyota Uhura es oficial de comunicaciones de la nave Enterprise, medio de transporte comandado por James T. Kirk (Chris Pine). Durante toda la saga ella se ha caracterizado por su fortaleza de carácter ante la adversidad.</p>
+			                	<i class="fa fa-facebook-official" aria-hidden="true"></i><!-- icono facebook -->
+			                	<i class="fa fa-twitter-square" aria-hidden="true"></i><!-- icono  twitter-->
+			                	<i class="fa fa-google-plus" aria-hidden="true"></i><!-- icono  google+-->
+			                	<img src="image/bullet.gif" alt="bullet">
+			                	<img src="image/ico_comment_inverted.png" alt="ico_comment_inverted"><!--ico_comment_inverted -->
+			                	<p>10</p>
+			                	<img src="image/bullet.gif" alt="bullet">
+			                	<span>ESPECTÁCULOS</span>
+			                	<img src="image/bullet.gif" alt="bullet">
+			                	<i class="fa fa-camera" aria-hidden="true"></i> -->icono camara 
+			                	<hr>
+			                </div>
+			            </div>
+			            <div class="row">            <!-- CUARTO Real Madrid: Cristiano Ronaldo  -->
+			                <div class="col-xs-12 col-sm-12  col-md-12 col-lg-12"> 
+			                	<p>hace 1 hora 12 mins</p>
+			                	<p>Real Madrid: Cristiano Ronaldo fué sancionado con dos partidos y si estará contra el Atlético de Madrid</p>
+			                	<img src="image/cristiano-ronaldo.jpg" alt="cristiano-ronaldo">
+			                	<p>fue homenajeado por el club al convertirse en el máximo goleador de su historia con 323 goles, igualando en apenas siete temporadas el registro de Raúl González establecido en sus 16 temporadas en el primer equipo. Recibió su cuarta Bota de Oro y se convirtió en el jugador que más veces la logró de la historia, logrando las tres últimas con el conjunto madrileño.</p>
+			                	<i class="fa fa-facebook-official" aria-hidden="true"></i> icono facebook
+			                	<i class="fa fa-twitter-square" aria-hidden="true"></i> icono  twitter
+			                	<i class="fa fa-google-plus" aria-hidden="true"></i>icono  google+
+			                	<img src="image/bullet.gif" alt="bullet">
+			                	<img src="image/ico_comment_inverted.png" alt="ico_comment_inverted"><!--ico_comment_inverted-->
+			                	<p>10</p>
+			                	<img src="image/bullet.gif" alt="bullet">
+			                	<span>Arequipa</span>
+			                	<hr>
+			                </div>
+			           	</div>
+			           	<div class="row">                                       <!-- SECTIONS   PRINCIPAL -->
+			                <div class="col-xs-12 col-sm-12  col-md-12 col-lg-12"> 
+			                	<p>hace 1 hora 12 mins</p>
+			                	<p>¡Steve Rogers ya no será el Capitán América en el cine! | VIDEO</p>
+			                	<img src="image/steve_rogers.jpg" alt="steve_rogers">
+			                	<p>Joe y Anthony Russo, directores de Civil War y de la futura Avengers: Infinity War, declararon en entrevista con el Huffington Post que Rogers oficialmente ya no será el Capi en las futuras entregas del Marvel Cinematic Universe.</p>
+								<p>Joe declaro que “(Rogers) tirando el escudo al final de Civil War es su manera de deshacerse de esa identidad, de admitir que la identidad del Capitán América le implicaba conflicto con sus decisiones personales”.</p>
+			                	<i class="fa fa-facebook-official" aria-hidden="true"></i><!-- icono facebook -->
+			                	<i class="fa fa-twitter-square" aria-hidden="true"></i><!-- icono  twitter-->
+			                	<i class="fa fa-google-plus" aria-hidden="true"></i><!-- icono  google+-->
+			                	<img src="image/bullet.gif" alt="bullet">
+			                	<img src="image/ico_comment_inverted.png" alt="ico_comment_inverted"><!--ico_comment_inverted -->
+			                	<p>10</p>
+			                	<img src="image/bullet.gif" alt="bullet">
+			                	<span>ESPECTÁCULOS</span>
+			                	<span>punto</span>
+			                	<i class="fa fa-youtube-play" aria-hidden="true"></i><!-- icono youtube -->
+			                	<p>AREQUIPA</p>
+			                	<hr>
+			                </div>
+			            </div>
+	               	</div>
+               	</div>
+			</section>
+			<footer>
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+							<div class="row">
+			                	<div class="col-xs-12 col-sm-12  col-md-4 col-lg-4">
+			                	<img src="image/logo-grupo-la-republica.png" alt="logo-grupo-la-republica">
+			                	<p>Grupo La República Digital</p>
+			                	<p>Jr. Camaná 320 Cercado de Lima</p>
+			                	<p>Teléfono: 711-6000</p>
+			                	<p>(Central Telefónica )</p>
+			                	<p>Todos los derechos reservados 2015</p>
+			                	</div>
+			                	<div class="col-xs-12 col-sm-12  col-md-2 col-lg-2">
+			                		<a href="https://www.youtube.com">Roger Federer</a>
+			                		<a href="https://www.youtube.com">SBS</a>
+			                		<a href="https://www.youtube.com">Scarlett Johanson</a>
+			                		<a href="https://www.youtube.com">Scotiabank</a>
+			                		<a href="https://www.youtube.com">Selena Gómez</a>
+			                		<a href="https://www.youtube.com">Spideman</a>
+			                		<a href="https://www.youtube.com">Spoting Cristal</a>
+			                		<a href="https://www.youtube.com">Sunat</a>
+			                		<a href="https://www.youtube.com">Telefónica del Perú</a>
+			                		<a href="https://www.youtube.com">Theb Walking Dead</a>
+			                		<a href="https://www.youtube.com">Twitter</a>
+			                		<a href="https://www.youtube.com">Universidad César Vallejo</a>
+			                		<a href="https://www.youtube.com">Universidad San Martín</a>
+			                		<a href="https://www.youtube.com">Universitario de Deportes</a>
+			                		<a href="https://www.youtube.com">Xbox</a>
+			                		<a href="https://www.youtube.com">Youtube</a>
+			                		<a href="https://www.youtube.com">Bayern Múnich</a>
+			                		<a href="https://www.youtube.com">Bayern Múnich</a>
+			                		<a href="https://www.youtube.com">BBVA</a>
+			                		<a href="https://www.youtube.com">Xbox</a>
+			                		<a href="https://www.youtube.com">BCP</a>
+			                	</div>
+			                	<div class="col-xs-12 col-sm-12  col-md-2 col-lg-2">
+			                		<p>Al fondo hay sitio</p>
+			                	</div>
+			                	<div class="col-xs-12 col-sm-12  col-md-2 col-lg-2">
+			                		<p>One Direction</p>
+			                	</div>
+			                	<div class="col-xs-12 col-sm-12  col-md-2 col-lg-2">
+			                		<p>Al fondo hay sitio</p>
+			                	</div>
+			                </div>
+			                <div class="row">
+			                	<div class="col-xs-12 col-sm-12  col-md-12 col-lg-12">
+			                		<hr>
+			                		<p>Diarios del PAL:</p>
+			                		<ul>
+			                			<li>Clarin |</li>
+			                			<li>La tercera |</li>
+			                			<li>El Universal Colombia |</li>
+			                			<li>El Universal El Universalenezuela |</li>
+			                			<li>Vanguardia |</li>
+			                			<li>La Prensa |</li>
+			                			<li>El Salvador |</li>
+			                			<li>La verdad |</li>
+			                			<li>Diario Libre |</li>
+			                			<li>El diario de hoy |</li>
+			                			<li>El colombiano |</li>
+			                		</ul>
+			                	</div>
+			                </div>
+						</div>
+					</div>
+				</div>
+			</footer>
+		</div>	
 	</body>
 </html>
