--- a/contacto.html
+++ b/contacto.html
@@ -25,67 +25,119 @@
 						<p>Lena este formulario si necesita enviarnos alguna información acerca del contenido del sitio web, su foncionalidad, o si tiene alguna propuesta de información o mejora para el sitio. Asi mismo, puede hacer llegar llegar a los redactores su opinión acerca de los contenidos de una determinada sección el cual podrá elegir como destinatario.</p><!--info parrafo-->
 					</div>
 				</div>
-                <div class="row">
-                	<div class="col-xs-12 col-sm-12 col-lg-12">
-                	    <div class="form-group">
-                			<input type="text" class="form-control" placeholder="Nombres completos">
-                		</div>
-                	</div>
-                </div>		
-                <div class="row">
-                	<div class="col-xs-12 col-sm-12 col-lg-12">	   
-                	    <div class="form-group">
-                			<input type="text" class="form-control" placeholder="Correo electrónico">
-                		</div>
-                	</div>
-                </div>		
-                <div class="row">
-                	<div class="col-xs-12 col-sm-12 col-lg-12">	  
-                	    <div class="form-group">
-                			<input type="text" class="form-control" placeholder="Teléfonos">
-                		</div>
-                		<p>(Opcional)</p>
-                	</div>
-                </div>
-                <div class="row">
-                	<div class="col-xs-12 col-sm-12 col-lg-12">
-                		<p>Elija un destinatario</p>
-                	</div>
-                </div>
-                <div class="row"><!--btn radio-->
-                	<div class="col-xs-6 col-sm-6 col-lg-6">
-                		<div class="radio">
-						    <label><!--1er btn-->
-						    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Sugerencia para el sitio web
-						  	</label>
-						  	<label><!--2do btn-->
-						    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Dirección periodistica
-						  	</label>
-						  	<label><!--3er btn-->
-						    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Dirección comercial
-						  	</label>
-						  	<label><!--4to btn-->
-						    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Cartas al director
-						  	</label>
-						  	<label><!--5to btn-->
-						    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Promociones y productos del diario
-						  	</label>
-						  	<label><!--6to btn-->
-						    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Archivo periodistico
-						    </label>	
+				<form role="form"><!--inicio formulario-->
+	                <div class="row"><!--nombre-->
+	                	<div class="col-xs-12 col-sm-12 col-lg-12">
+	                	    <div class="form-group">
+	                			<input type="text" class="form-control" placeholder="Nombres completos">
+	                		</div>
+	                	</div>
+	                </div>		
+	                <div class="row"><!--correo electronico-->
+	                	<div class="col-xs-12 col-sm-12 col-lg-12">	   
+	                	    <div class="form-group">
+	                			<input type="text" class="form-control" placeholder="Correo electrónico">
+	                		</div>
+	                	</div>
+	                </div>		
+	                <div class="row"><!--telefonos-->
+	                	<div class="col-xs-12 col-sm-12 col-lg-12">	  
+	                	    <div class="form-group">
+	                			<input type="text" class="form-control" placeholder="Teléfonos">
+	                		</div>
+	                		<p>(Opcional)</p>
+	                	</div>
+	                </div>
+	                <div class="row">
+	                	<div class="col-xs-12 col-sm-12 col-lg-12">
+	                		<p>Elija un destinatario</p>
+	                	</div>
+	                </div>
+	                 <div class="row"><!--checkouts-->
+	                	<div class="col-xs-12 col-sm-12 col-lg-12">
+			                <div class="row"><!--btn radio-->
+			                	<div class="col-xs-6 col-sm-6 col-lg-6">
+			                		<div class="radio">
+									    <label><!--1er btn-->
+									    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Sugerencia para el sitio web
+									  	</label>
+									</div>
+								</div>	
+								<div class="col-xs-6 col-sm-6 col-lg-6"> 
+			                		<p>(Ej:funcionamiento y mejoreas para el sitio)</p>
+			                    </div>
+			                </div>
+	                		 <div class="row"><!--btn radio-->
+	                	<div class="col-xs-6 col-sm-6 col-lg-6">
+	                		<div class="radio">
+							    <label><!--2do btn-->
+							    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Dirección periodistica
+							  	</label>
+							</div>
+						</div>	
+						<div class="col-xs-6 col-sm-6 col-lg-6"> 
+	                		<p>(Ej:Sujerencia para la nota de prensa)</p>
+	                    </div>
+	                </div>    
+	                <div class="row"><!--btn radio-->
+	                	<div class="col-xs-6 col-sm-6 col-lg-6">
+	                		<div class="radio">
+							    <label><!--3er btn-->
+							    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Dirección comercial
+							  	</label>
+							</div>
+						</div>	
+						<div class="col-xs-6 col-sm-6 col-lg-6"> 
+	                		<p>(Ej:denuncias, comentarios e impresiones)</p>
+	                    </div>
+	                </div> 
+	                <div class="row"><!--btn radio-->
+	                	<div class="col-xs-6 col-sm-6 col-lg-6">
+	                		<div class="radio">
+							    <label><!--4to btn-->
+							    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Cartas al director
+							  	</label>
+							</div>
+						</div>	
+						<div class="col-xs-6 col-sm-6 col-lg-6"> 
+	                		<p>(Ej:Promociones, tablets, etc)</p>
+	                    </div>
+	                </div>  
+	                <div class="row"><!--btn radio-->
+	                	<div class="col-xs-6 col-sm-6 col-lg-6">
+		                	<div class="radio">
+		                		<label><!--5to btn-->
+						    		<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Promociones y productos del diario
+								</label>
+							</div>	
 						</div>
-                	</div>
-                	<div class="col-xs-6 col-sm-6 col-lg-6">
-                		<p>(Ej:funcionamiento y mejoreas para el sitio)</p>
-                		<p>(Ej:Sujerencia para la nota de prensa)</p>
-                		<p>(Ej:denuncias, comentarios e impresiones)</p>
-                		<p>(Ej:Promociones, tablets, etc)</p>
-                		<p>(Ej:Ediciones impresas/fotos)</p>
-                	</div>
-                </div>
-                <div class="row">
-
-                </div>
+						<div class="col-xs-6 col-sm-6 col-lg-6"> 
+	                		<p>(Ej:Promociones, tablet, etc)</p>
+	                    </div>
+	                </div>           
+	                <div class="row"><!--btn radio-->
+	                	<div class="col-xs-6 col-sm-6 col-lg-6">
+		                	<div class="radio">
+		                		<label><!--6to btn-->
+							    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Archivo periodistico
+							    </label>
+							</div>
+						</div>	
+						<div class="col-xs-6 col-sm-6 col-lg-6"> 
+	                		<p>(Ej:Ediciones impresas/fotos)</p>
+	                    </div>
+	                </div> 
+	                <div class="row"><!--caja de mensaje-->
+	                	<div class="col-xs-12 col-sm-12 col-lg-12">
+	                		<textarea class="form-control" rows="9" placeholder="Mensaje"></textarea>
+	                	</div>
+	                </div>	
+	                <div class="row">
+	                	<div class="col-xs-12 col-sm-12 col-lg-12"><!--btn enviar-->
+	                		<button type="submit" class="btn btn-default">Enviar</button>
+	                	</div>
+	                </div>
+			    </form>
 			</div>
 		</section>
 	</body>
