agregando estilo al boton y cajas ,padding y margins

--- a/contacto.html
+++ b/contacto.html
@@ -30,32 +30,32 @@
 								<p class="text-justify">Lena este formulario si necesita enviarnos alguna información acerca del contenido del sitio web, su foncionalidad, o si tiene alguna propuesta de información o mejora para el sitio. Asi mismo, puede hacer llegar llegar a los redactores su opinión acerca de los contenidos de una determinada sección el cual podrá elegir como destinatario.</p><!--info parrafo-->
 							</div>
 						</div>
-						<form role="form"><!--inicio formulario-->
+						<form class="p-x-12" role="form"><!--inicio formulario-->
 			                <div class="row"><!--nombre-->
 			                	<div class="col-xs-16 col-sm-16 col-lg-16">
 			                	    <div class="form-group">
-			                			<input type="text" class="form-control" placeholder="Nombres completos">
+			                			<input type="text" class="bg-grey form-control" placeholder="Nombres completos">
 			                		</div>
 			                	</div>
 			                </div>		
 			                <div class="row"><!--correo electronico-->
-			                	<div class="col-xs-16 col-sm-16 col-lg-16">	   
+			                	<div class="col-xs-16 col-sm-16 col-lg-16">
 			                	    <div class="form-group">
-			                			<input type="text" class="form-control" placeholder="Correo electrónico">
+			                			<input type="text" class="bg-grey form-control" placeholder="Correo electrónico">
 			                		</div>
 			                	</div>
 			                </div>		
 			                <div class="row"><!--telefonos-->
 			                	<div class="col-xs-16 col-sm-16 col-lg-16">	  
 			                	    <div class="form-group">
-			                			<input type="text" class="form-control" placeholder="Teléfonos">
+			                			<input type="text" class="bg-grey form-control" placeholder="Teléfonos">
 			                		</div>
-			                		<p>(Opcional)</p>
+			                		<p class="help-block">(Opcional)</p>
 			                	</div>
 			                </div>
-			                <div class="row">
+			                <div class="row p-t-5">
 			                	<div class="col-xs-16 col-sm-16 col-lg-16">
-			                		<p>Elija un destinatario</p>
+			                		<p class="font-weight-bold">Elija un destinatario</p>
 			                	</div>
 			                </div>
 			                <div class="row"><!--checkouts-->
@@ -64,82 +64,82 @@
 					                	<div class="col-xs-8 col-sm-8 col-lg-8">
 					                		<div class="radio">
 											    <label><!--1er btn-->
-											    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Sugerencia para el sitio web
+											    	<input type="radio" name="opciones" value="opcion_2">Sugerencia para el sitio web
 											  	</label>
 											</div>
 										</div>	
 										<div class="col-xs-8 col-sm-8 col-lg-8"> 
-					                		<p class="text-right">(Ej:funcionamiento y mejoreas para el sitio)</p>
+					                		<p class="text-right"><small>(Ej:funcionamiento y mejoreas para el sitio)</small></p>
 					                    </div>
 					                </div>
 			                		<div class="row"><!--btn radio-->
 			                			<div class="col-xs-8 col-sm-8 col-lg-8">
 			                				<div class="radio">
 									   			 <label><!--2do btn-->
-									    			<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Dirección periodistica
+									    			<input type="radio" name="opciones" value="opcion_2">Dirección periodistica
 									  			</label>
 											</div>
 										</div>	
 										<div class="col-xs-8 col-sm-8 col-lg-8"> 
-					                		<p class="text-right">(Ej:Sujerencia para la nota de prensa)</p>
+					                		<p class="text-right"><small>(Ej:Sujerencia para la nota de prensa)</small></p>
 					                    </div>
 					                </div>    
 					                <div class="row"><!--btn radio-->
 					                	<div class="col-xs-8 col-sm-8 col-lg-8">
 					                		<div class="radio">
 											    <label><!--3er btn-->
-											    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Dirección comercial
+											    	<input type="radio" name="opciones" value="opcion_2">Dirección comercial
 											  	</label>
 											</div>
 										</div>	
 										<div class="col-xs-8 col-sm-8 col-lg-8"> 
-					                		<p class="text-right">(Ej:denuncias, comentarios e impresiones)</p>
+					                		<p class="text-right"><small>(Ej:denuncias, comentarios e impresiones)</small></p>
 					                    </div>
 					                </div> 
 					                <div class="row"><!--btn radio-->
 					                	<div class="col-xs-8 col-sm-8 col-lg-8">
 					                		<div class="radio">
 											    <label><!--4to btn-->
-											    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Cartas al director
+											    	<input type="radio" name="opciones" value="opcion_2">Cartas al director
 											  	</label>
 											</div>
 										</div>	
 										<div class="col-xs-8 col-sm-8 col-lg-8"> 
-					                		<p class="text-right">(Ej:Promociones, tablets, etc)</p>
+					                		<p class="text-right"><small>(Ej:Promociones, tablets, etc)</small></p>
 					                    </div>
 					                </div>  
 					                <div class="row"><!--btn radio-->
 					                	<div class="col-xs-8 col-sm-8 col-lg-8">
 						                	<div class="radio">
 						                		<label><!--5to btn-->
-										    		<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Promociones y productos del diario
+										    		<input type="radio" name="opciones" value="opcion_2">Promociones y productos del diario
 												</label>
 											</div>	
 										</div>
 										<div class="col-xs-8 col-sm-8 col-lg-8"> 
-					                		<p class="text-right">(Ej:Promociones, tablet, etc)</p>
+					                		<p class="text-right"><small>(Ej:Promociones, tablet, etc)</small></p>
 					                    </div>
 					                </div>           
 					                <div class="row"><!--btn radio-->
 					                	<div class="col-xs-8 col-sm-8 col-lg-8">
 						                	<div class="radio">
 						                		<label><!--6to btn-->
-											    	<input type="radio" name="opciones" id="opciones_2" value="opcion_2">Archivo periodistico
+											    	<input type="radio" name="opciones" value="opcion_2">Archivo periodistico
 											    </label>
 											</div>
 										</div>	
 										<div class="col-xs-8 col-sm-8 col-lg-8"> 
-					                		<p class="text-right">(Ej:Ediciones impresas/fotos)</p>
+					                		<p class="text-right"><small>(Ej:Ediciones impresas/fotos)</small></p>
 					                    </div>
 					                </div> 
 					                <div class="row"><!--caja de mensaje-->
 					                	<div class="col-xs-16 col-sm-16 col-lg-16">
-					                		<textarea class="form-control" rows="9" placeholder="Mensaje"></textarea>
+					                		<textarea class="bg-grey form-control" rows="9" placeholder="Mensaje"></textarea>
 					                	</div>
 					                </div>	
-					                <div class="row">
+					                <div class="row text-center">
 					                	<div class="col-xs-16 col-sm-16 col-lg-16"><!--btn enviar-->
-					                		<button type="submit" class="btn btn-default">Enviar</button>
+					                		<button type="submit" class="btn  btn-lg active">Enviar</button>
 					                	</div>
 					                </div>
 					            </div>    
