link de columnistas

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<section class="gray mgts linearoja"><!--Columnistas-->
 							<div class="row"><!--  renglon de titulo-->
 								<div class="col-md-16"><!--columnas para titulo-->
-									<h3 class="titulo blanca text-center">COLUMNISTAS</h3>
+									<a href="columnistas.html"><h3 class="titulo blanca text-center">COLUMNISTAS</h3></a>
 								</div><!--cierre de columasn-->
 							</div><!--fin de renglon de titulo  -->
 							<div class="row "><!-- renglon para fotos -->
